--- a/requirements_cc.txt
+++ b/requirements_cc.txt
@@ -4,5 +4,5 @@ scipy==1.14.1+computecanada
 tensorboard==2.17.0
 wandb==0.14.2+computecanada
 graphviz==0.20.3+computecanada
-pandas==2.2.2.+computecanada
+pandas==2.2.2+computecanada
 pygame==2.5.2+computecanada
