--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ glfw==2.7.0
 google-api-core==2.19.1
 google-auth==2.31.0
 googleapis-common-protos==1.63.2
+graphviz==0.20.3
 grpcio==1.64.1
 gym==0.21.0
 idna==3.7
@@ -62,6 +63,7 @@ pyasn1_modules==0.4.0
 pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
+pygame==2.6.0
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
